SLING-12574 Update options and versions
remove backing Option and legacy bundles